# citum-core

./: .alint.yml  .gitattributes  .gitignore  .migration-task-apa-7th.txt  .migration-task-chicago-notes.txt  .migration-task-gost-r-7-0-5-2008-author-date.txt  .release-plz.toml  AGENTS.md  AUTHORS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  LICENSE-APACHE  README.md  RELEASING.md  SECURITY.md  citum.schema.json  cliff.toml  deny.toml  find-targets.js  justfile  locales  release.toml  renovate.json
crates/citum-analyze/: CHANGELOG.md  Cargo.toml  README.md
crates/citum-analyze/src/: analyzer.rs  batch_test.rs  config_presets.rs  coverage_gap.rs  main.rs  profile_discovery.rs  ranker.rs  savings.rs  semantic.rs  util.rs
crates/citum-bindings/: CHANGELOG.md  Cargo.toml  README-JSR.md
crates/citum-bindings/src/: lib.rs
crates/citum-bindings/tests/: integration.rs
crates/citum-cli/: Cargo.toml  README.md
crates/citum-cli/generated_schemas/: bib.json  citation.json  locale.json  registry.json  style.json
crates/citum-cli/src/: args.rs  commands.rs  convert_refs.rs  main.rs  output.rs  style_browser.rs  style_catalog.rs  style_resolver.rs  table.rs  typst_pdf.rs
crates/citum-cli/src/commands/: bindings.rs  catalog.rs  check.rs  convert.rs  doctor.rs  lint.rs  locale.rs  mod.rs  registry.rs  schema.rs  style.rs  style_install.rs  util.rs
crates/citum-edtf/: CHANGELOG.md  Cargo.toml  README.md
crates/citum-edtf/src/: lib.rs
crates/citum-engine/: CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md
crates/citum-engine/benches/: rendering.rs
crates/citum-engine/examples/: test_cite.rs
crates/citum-engine/src/: biblatex.rs  error.rs  ffi.rs  io.rs  lib.rs  reference.rs  sort_partitioning.rs  sort_support.rs  sorting.rs
crates/citum-engine/src/api/: document.rs  forward_compat.rs  mod.rs  refs_input.rs  session.rs  style_input.rs  types.rs  warnings.rs
crates/citum-engine/src/ffi/: biblatex.rs  mod.rs
crates/citum-engine/src/grouping/: mod.rs  selector.rs  sorting.rs
crates/citum-engine/src/processor/: bibliography.rs  citation.rs  disambiguation.rs  labels.rs  matching.rs  mod.rs  note_context.rs  rendering.rs  run_state.rs  setup.rs  sorting.rs  tests.rs
crates/citum-engine/src/render/: bibliography.rs  citation.rs  component.rs  djot.rs  format.rs  html.rs  latex.rs  markdown.rs  mod.rs  org.rs  plain.rs  punctuation.rs  rich_text.rs  test_formats.rs  typst.rs  visible_scan.rs
crates/citum-engine/src/values/: contributor.rs  date.rs  identifier.rs  list.rs  locator.rs  message.rs  mod.rs  number.rs  range.rs  term.rs  tests.rs  text_case.rs  title.rs  type_class.rs  type_label.rs  variable.rs
crates/citum-engine/tests/: bibliography.rs  citations.rs  cross_role_contributors.rs  date_annotations.rs  document.rs  domain_fixtures.rs  forward_compatibility.rs  gendered_locale.rs  i18n.rs  io.rs  metadata.rs  multilingual.rs  multilingual_names.rs  name_form_initialization.rs  regression_interview.rs  sort_oracle.rs  term_locale.rs
crates/citum-io/: Cargo.toml  README.md
crates/citum-io/src/: biblatex.rs  lib.rs
crates/citum-migrate/: CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md
crates/citum-migrate/js/: embedded-template-runtime.js
crates/citum-migrate/src/: assembly.rs  base_detector.rs  bib_postprocess.rs  citation_validate.rs  cli.rs  compilation.rs  compressor.rs  debug_output.rs  error.rs  evidence.rs  fixups.rs  info_extractor.rs  ir.rs  js_runtime.rs  lib.rs  lineage.rs  main.rs  main_tests.rs  measured_citation.rs  output_plan.rs  preset_detector.rs  provenance.rs  runtime.rs  template_diff.rs  template_resolver.rs  upsampler.rs
crates/citum-migrate/tests/: article_journal_no_page_fallback.rs  bibliography_layout_order.rs  date_inference.rs  initialize_with_migration.rs  inline_journal_detail_grouping.rs  no_date_fallback_cleanup.rs  patent_number_suppression.rs  substitute_extraction.rs  term_mapping.rs  variable_once.rs
crates/citum-pdf/: Cargo.toml
crates/citum-pdf/src/: lib.rs
crates/citum-refs/: Cargo.toml  README.md
crates/citum-refs/src/: biblatex.rs  lib.rs
crates/citum-resolver-api/: Cargo.toml  README.md
crates/citum-resolver-api/src/: error.rs  lib.rs
crates/citum-schema/: CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md
crates/citum-schema-data/: CHANGELOG.md  Cargo.toml  README.md
crates/citum-schema-data/src/: abbreviation.rs  citation.rs  lib.rs  macros.rs
crates/citum-schema-style/: CHANGELOG.md  Cargo.toml  README.md
crates/citum-schema-style/benches/: formats.rs
crates/citum-schema-style/src/: citation.rs  grouping.rs  legacy.rs  lib.rs  lint.rs  macros.rs  presets.rs  reference_multilingual_tests.rs  registry.rs  renderer.rs  style_base.rs  style_preset.rs  template.rs  tests.rs  version.rs
crates/citum-schema-style/tests/: bdd_inheritance.rs  json_deserialization.rs  parent_reference.rs  verify_examples.rs
crates/citum-schema/benches/: formats.rs
crates/citum-schema/src/: citation.rs  grouping.rs  lib.rs  macros.rs  presets.rs  renderer.rs  template.rs
crates/citum-schema/tests/: json_deserialization.rs  parent_reference.rs  verify_examples.rs
crates/citum-server/: CHANGELOG.md  Cargo.toml  README.md
crates/citum-server/src/: error.rs  http.rs  lib.rs  main.rs  rpc.rs
crates/citum-server/tests/: rpc.rs
crates/citum_store/: CHANGELOG.md  Cargo.toml  README.md
crates/citum_store/src/: chain.rs  cid.rs  config.rs  format.rs  lib.rs  paths.rs  resolver.rs  resolver_tests.rs
crates/citum_store/tests/: resolver_arch.rs
crates/csl-legacy/: CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md
crates/csl-legacy/src/: csl_json.rs  lib.rs  model.rs  parser.rs
crates/csln_core/: Cargo.toml
crates/csln_core/src/: lib.rs  template.rs
crates/csln_core/tests/: json_deserialization.rs
crates/csln_processor/: Cargo.toml
crates/csln_processor/examples/: test_cite.rs
crates/csln_processor/src/: ffi.rs
crates/csln_processor/tests/: document.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: ffi_processor_new.rs  ffi_render_batch_and_bibliography.rs  ffi_render_citation.rs
(+5025 files in other folders)
