[workspace]
members = [
    "crates/csl-legacy",
    "crates/citum-schema-data",
    "crates/citum-schema-style",
    "crates/citum-schema",
    "crates/citum-migrate",
    "crates/citum-engine",
    "crates/citum-analyze",
    "crates/citum-cli",
    "crates/citum-server",
    "crates/citum-edtf",
    "crates/citum_store",
    "crates/citum-bindings"
]
resolver = "2"

[workspace.package]
version = "0.11.0"
edition = "2024"
license = "MIT OR Apache-2.0"

[workspace.lints.rust]
unsafe_code = "warn"

[profile.release]
opt-level = 3
lto = "thin"        # Faster than "true", almost as good
strip = true
panic = "abort"
