[workspace]
members = [
    "crates/csl-legacy",
    "crates/citum-schema-data",
    "crates/citum-schema-style",
    "crates/citum-schema",
    "crates/citum-migrate",
    "crates/citum-engine",
    "crates/citum-analyze",
    "crates/citum-cli",
    "crates/citum-server",
    "crates/citum-edtf",
    "crates/citum_store",
    "crates/citum-bindings"
]
resolver = "2"

[workspace.package]
version = "0.11.0"
edition = "2024"
license = "MIT OR Apache-2.0"

[workspace.lints.rust]
missing_docs = "deny"
unsafe_code = "warn"

[workspace.lints.rustdoc]
bare_urls = "warn"
broken_intra_doc_links = "deny"
invalid_html_tags = "warn"
missing_crate_level_docs = "warn"
private_intra_doc_links = "warn"
redundant_explicit_links = "warn"
unescaped_backticks = "warn"

[workspace.lints.clippy]
empty_docs = "deny"
four_forward_slashes = "deny"
missing_errors_doc = "warn"
missing_panics_doc = "warn"
missing_safety_doc = "deny"
tabs_in_doc_comments = "deny"

[profile.release]
opt-level = 3
lto = "thin"        # Faster than "true", almost as good
strip = true
panic = "abort"
