[package]
name = "citum-engine-fuzz"
version = "0.0.0"
publish = false
edition = "2024"

[package.metadata]
cargo-fuzz = true

[dependencies]
citum-engine = { package = "citum-engine", path = "../crates/citum-engine", features = ["ffi"] }
citum-schema = { package = "citum-schema", path = "../crates/citum-schema" }
libfuzzer-sys = "0.4"
serde_json = "1.0"

[workspace]

[[bin]]
name = "ffi_processor_new"
path = "fuzz_targets/ffi_processor_new.rs"
test = false
doc = false

[[bin]]
name = "ffi_render_citation"
path = "fuzz_targets/ffi_render_citation.rs"
test = false
doc = false

[[bin]]
name = "ffi_render_batch_and_bibliography"
path = "fuzz_targets/ffi_render_batch_and_bibliography.rs"
test = false
doc = false
