[package]
name = "citum-bindings"
version.workspace = true
edition.workspace = true
authors = ["Bruce D'Arcus <bdarcus@gmail.com>"]
license.workspace = true
description = "Citum cross-language bindings (WASM, cdylib)"

[lib]
name = "citum_bindings"
crate-type = ["cdylib", "rlib"]

[dependencies]
citum-engine = { path = "../citum-engine" }
citum-schema = { package = "citum-schema", path = "../citum-schema" }
serde_json = "1.0"
serde_yaml = { package = "serde_yaml_ng", version = "0.10" }
wasm-bindgen = { version = "0.2", optional = true }

[features]
wasm = ["dep:wasm-bindgen"]

[lints]
workspace = true
