[package]
name = "citum-bindings"
version.workspace = true
edition.workspace = true
authors = ["Bruce D'Arcus <bdarcus@gmail.com>"]
license.workspace = true
description = "Citum cross-language bindings (WASM, cdylib)"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
name = "citum_bindings"
crate-type = ["cdylib", "rlib"]

[dependencies]
citum-engine = { path = "../citum-engine" }
citum-schema = { package = "citum-schema", path = "../citum-schema" }
csl_legacy = { package = "csl-legacy", path = "../csl-legacy", optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = { package = "serde_yaml_ng", version = "0.10" }
indexmap = { version = "2", features = ["serde"] }
wasm-bindgen = { version = "0.2", optional = true }
specta = { version = "2.0.0-rc.23", features = ["collect"], optional = true }
specta-typescript = { version = "0.0.10", optional = true }

[features]
wasm = ["dep:wasm-bindgen"]
legacy-convert = ["dep:csl_legacy", "citum-schema/legacy-convert"]
bindings = ["citum-schema/bindings"]
typescript = ["dep:specta", "dep:specta-typescript", "bindings"]

[lints]
workspace = true
