[package]
name = "citum"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "citum"
path = "src/main.rs"

[dependencies]
clap = { version = "4.4", features = ["derive", "color"] }
clap_complete = "4.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = { package = "serde_yaml_ng", version = "0.10" }
ciborium = "0.2"
strsim = "0.10"
walkdir = "2.4"
schemars = { version = "1.2.1", features = ["indexmap2"], optional = true }
indexmap = "2.2.3"
citum_schema = { package = "citum-schema", path = "../citum-schema" }
citum_engine = { package = "citum-engine", path = "../citum-engine" }
csl_legacy = { package = "csl-legacy", path = "../csl-legacy" }
biblatex = "0.11"
citum_store = { package = "citum_store", path = "../citum_store" }
citum-pdf = { path = "../citum-pdf", optional = true }
citum-bindings = { path = "../citum-bindings", optional = true }

[features]
default = []
schema = ["dep:schemars", "citum_schema/schema"]
typst-pdf = ["dep:citum-pdf"]
typescript = ["dep:citum-bindings", "citum-bindings/typescript"]

[lints]
workspace = true
