[package]
name = "citum"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Citum CLI: render, validate, convert, and migrate citation styles, references, and documents"
readme = "../../README.md"
keywords = ["citation", "bibliography", "csl", "citeproc", "scholarly"]
categories = ["command-line-utilities", "text-processing"]

[[bin]]
name = "citum"
path = "src/main.rs"

[dependencies]
clap = { version = "4.4", features = ["derive", "color"] }
clap_complete = "4.4"
comfy-table = "7.1"
crossterm = "0.29.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = { package = "serde_yaml_ng", version = "0.10" }
ciborium = "0.2"
strsim = "0.11"
schemars = { version = "1.2.1", features = ["indexmap2"], optional = true }
ratatui = { version = "0.30.0", default-features = false, features = ["crossterm_0_29"] }
citum-schema = { workspace = true, features = ["legacy-convert"] }
citum-schema-data = { workspace = true }
citum-engine = { workspace = true }
citum-io = { workspace = true }
citum_store = { workspace = true, features = ["http"] }
citum-resolver-api = { workspace = true }
citum-server = { workspace = true, optional = true }
url = { version = "2.5", features = ["serde"] }

# Features intentionally removed for the v1 crates.io publish: `typescript`
# depended on the unpublished `citum-bindings` crate. Its cfg-gated code path
# remains in src/ as dead code; workspace check-cfg silences that warning.
# `--pdf` always returns a clear error pointing users at `typst compile`.
[features]
default = []
schema = ["dep:schemars", "citum-schema/schema", "dep:citum-server", "citum-server/schema-types"]

[lints]
workspace = true
