[package]
name = "citum-edtf"
version.workspace = true
edition.workspace = true
description = "A modern EDTF (Extended Date/Time Format) parser built with winnow."
readme = "README.md"
license.workspace = true
repository.workspace = true

[dependencies]
winnow = "1.0"
serde = { version = "1.0", features = ["derive"], optional = true }

[features]
default = []
serde = ["dep:serde"]

[lints]
workspace = true

[lib]
doctest = false
