[package]
name = "citum-engine"
version.workspace = true
edition.workspace = true
authors = ["Bruce D'Arcus <bdarcus@gmail.com>"]
license.workspace = true
description = "Citum citation and bibliography processor"
repository.workspace = true

[lib]
name = "citum_engine"
crate-type = ["rlib"]

[dependencies]
citum_schema = { package = "citum-schema", path = "../citum-schema", features = ["legacy-convert"] }
citum_schema_data = { package = "citum-schema-data", path = "../citum-schema-data" }
csl_legacy = { package = "csl-legacy", path = "../csl-legacy" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = { package = "serde_yaml_ng", version = "0.10" }
thiserror = "2.0"
citum_edtf = { package = "citum-edtf", path = "../citum-edtf", features = ["serde"] }
indexmap = { version = "2.2.6", features = ["serde"] }
winnow = "1.0"
jotdown = "0.10"
orgize = "0.9"
icu_collator = { version = "2.2.0", features = ["compiled_data"], optional = true }
icu_locale = { version = "2.2.0", optional = true }
unicode-script = "0.5.8"

[features]
default = ["icu"]
icu = ["dep:icu_collator", "dep:icu_locale"]
ffi = []

[dev-dependencies]
criterion = { version = "0.8", features = ["html_reports"] }
citum_io = { package = "citum-io", path = "../citum-io" }
rstest = "0.26"
tempfile = "3.8"
tracing.workspace = true
url = { version = "2.5", features = ["serde"] }

[[bench]]
name = "rendering"
harness = false

[lints]
workspace = true
