[package]
name = "citum-engine"
version.workspace = true
edition.workspace = true
authors = ["Bruce D'Arcus <bdarcus@gmail.com>"]
license.workspace = true
description = "Citum citation and bibliography processor"
readme = "README.md"
repository.workspace = true

[lib]
name = "citum_engine"
crate-type = ["rlib", "cdylib"]

[dependencies]
citum-schema = { workspace = true, features = ["legacy-convert"] }
citum-schema-data = { workspace = true }
citum-refs = { workspace = true }
csl-legacy = { workspace = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = { package = "serde_yaml_ng", version = "0.10" }
thiserror = "2.0"
citum-edtf = { workspace = true, features = ["serde"] }
indexmap = { version = "2.2.6", features = ["serde"] }
winnow = "1.0"
jotdown = "0.10"
pulldown-cmark = "0.13"
orgize = "0.9"
icu_collator = { version = "2.2.0", features = ["compiled_data"], optional = true }
icu_locale = { version = "2.2.0", optional = true }
unicode-script = "0.5.8"
schemars = { version = "1.2.1", features = ["derive"], optional = true }

[features]
default = ["icu"]
icu = ["dep:icu_collator", "dep:icu_locale"]
ffi = []
schema = ["dep:schemars", "citum-schema/schema", "citum-schema-data/schema"]

[dev-dependencies]
criterion = { version = "0.8", features = ["html_reports"] }
citum-io = { path = "../citum-io" }
rstest = "0.26"
tempfile = "3.8"
tracing.workspace = true
url = { version = "2.5", features = ["serde"] }

[[bench]]
name = "rendering"
harness = false

[lints]
workspace = true
