[package]
name = "citum-io"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Citum I/O and format conversion library"
readme = "README.md"
repository.workspace = true

[dependencies]
citum-schema = { workspace = true, features = ["legacy-convert"] }
citum-engine = { workspace = true }
citum-refs = { workspace = true }
csl-legacy = { workspace = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = { package = "serde_yaml_ng", version = "0.10" }
ciborium = "0.2"
indexmap = { version = "2.2.6", features = ["serde"] }
url = { version = "2.5", features = ["serde"] }

[lints]
workspace = true

[lib]
doctest = false
