[package]
name = "citum-migrate"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "CSL 1.0 to Citum style migration library"
repository.workspace = true

[[bin]]
name = "citum-migrate"
path = "src/main.rs"

[dependencies]
tracing.workspace = true
csl-legacy = { workspace = true }
citum-schema = { workspace = true }
deno_core = "0.400.0"
indexmap = "2.13.0"
roxmltree = "0.21"
serde_json = "1.0"
serde_yaml = { package = "serde_yaml_ng", version = "0.10" }
serde = { version = "1.0", features = ["derive"] }

[lints]
workspace = true

[lib]
doctest = false
