[package]
name = "citum-migrate"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Standalone CSL 1.0 to Citum style migration library and tool"
readme = "README.md"
repository.workspace = true

[[bin]]
name = "citum-migrate"
path = "src/main.rs"

[dependencies]
clap = { version = "4.4", features = ["derive", "color"] }
tracing.workspace = true
csl-legacy = { workspace = true }
citum-schema = { workspace = true }
citum-engine = { workspace = true }
deno_core = "0.400.0"
indexmap = "2.13.0"
roxmltree = "0.21"
serde_json = "1.0"
serde_yaml = { package = "serde_yaml_ng", version = "0.10" }
serde = { version = "1.0", features = ["derive"] }
dhat = { version = "0.3", optional = true }

[features]
default = []
dhat-heap = ["dep:dhat"]

[lints]
workspace = true

[lib]
doctest = false
