[package]
name = "citum-pdf"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false
repository.workspace = true

[lib]
name = "citum_pdf"
test = false
doctest = false

[dependencies]
typst = "0.14.2"
typst-pdf = "0.14.2"
typst-kit = { version = "0.14.2", default-features = false, features = ["fonts", "embed-fonts"] }

[lints]
workspace = true
