[package]
name = "citum-refs"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Citum reference data loading and parsing"
readme = "README.md"
repository.workspace = true

[dependencies]
citum-schema = { workspace = true, features = ["legacy-convert"] }
csl-legacy = { workspace = true }
biblatex = "0.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = { package = "serde_yaml_ng", version = "0.10" }
ciborium = "0.2"
indexmap = { version = "2.2.6", features = ["serde"] }
thiserror = "2.0"
url = { version = "2.5", features = ["serde"] }

[dev-dependencies]
rstest = "0.26"

[lints]
workspace = true

[lib]
doctest = false
