[package]
name = "citum-resolver-api"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Citum style resolution interfaces and error types"

[dependencies]
thiserror = "2.0"
serde_json = { version = "1.0", optional = true }

[features]
default = ["serde_json"]
http = []
