[package]
name = "citum-resolver-api"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Citum style resolution interfaces and error types"
readme = "README.md"
repository.workspace = true

[dependencies]
thiserror = "2.0"
serde_json = { version = "1.0", optional = true }

[features]
default = ["serde_json"]
http = []

[lints]
workspace = true

[lib]
test = false
doctest = false
