[package]
name = "citum-schema-data"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
schemars = { version = "1.2.1", features = ["derive", "url2", "indexmap2"], optional = true }
citum_edtf = { package = "citum-edtf", path = "../citum-edtf", features = ["serde"] }
url = { version = "2.5", features = ["serde"] }
csl_legacy = { package = "csl-legacy", path = "../csl-legacy", optional = true }
indexmap = { version = "2", features = ["serde"] }

[features]
default = []
legacy-convert = ["dep:csl_legacy"]
schema = ["dep:schemars"]

[lints]
workspace = true

[dev-dependencies]
serde_json = "1.0"
serde_yaml = { package = "serde_yaml_ng", version = "0.10.0" }
