[package]
name = "citum-schema-data"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Citum bibliographic data schema types"
readme = "README.md"
repository.workspace = true

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
schemars = { version = "1.2.1", features = ["derive", "url2", "indexmap2"], optional = true }
specta = { version = "2.0.0-rc.23", features = ["derive", "serde_json", "indexmap", "url"], optional = true }
citum-edtf = { workspace = true, features = ["serde"] }
url = { version = "2.5", features = ["serde"] }
csl-legacy = { workspace = true, optional = true }
indexmap = { version = "2", features = ["serde"] }

[features]
default = []
legacy-convert = ["dep:csl-legacy"]
schema = ["dep:schemars"]
bindings = ["dep:specta"]

[lints]
workspace = true

[dev-dependencies]
serde_json = "1.0"
serde_yaml = { package = "serde_yaml_ng", version = "0.10.0" }

[lib]
doctest = false
