[package]
name = "citum-schema-style"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = { package = "serde_yaml_ng", version = "0.10" }
ciborium = "0.2"
schemars = { version = "1.2.1", features = ["derive", "url2", "indexmap2"], optional = true }
citum_edtf = { package = "citum-edtf", path = "../citum-edtf", features = ["serde"] }
url = { version = "2.5", features = ["serde"] }
csl_legacy = { package = "csl-legacy", path = "../csl-legacy", optional = true }
indexmap = { version = "2", features = ["serde"] }
citum_schema_data = { package = "citum-schema-data", path = "../citum-schema-data" }

[features]
default = []
legacy-convert = ["dep:csl_legacy", "citum_schema_data/legacy-convert"]
schema = ["dep:schemars", "citum_schema_data/schema"]

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "formats"
harness = false

[lints]
workspace = true
