[package]
name = "citum-schema-style"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Citum style schema types and styling engine"
readme = "README.md"
repository.workspace = true

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = { package = "serde_yaml_ng", version = "0.10" }
ciborium = "0.2"
schemars = { version = "1.2.1", features = ["derive", "url2", "indexmap2"], optional = true }
specta = { version = "2.0.0-rc.23", features = ["derive"], optional = true }
csl-legacy = { workspace = true, optional = true }
indexmap = { version = "2", features = ["serde"] }
citum-schema-data = { workspace = true }
citum-resolver-api = { workspace = true }
sha2 = "0.11"
cid = { version = "0.11", default-features = false, features = ["alloc"] }
multihash = { version = "0.19", default-features = false, features = ["alloc"] }
semver = "1"
icu_locale = "2.2.0"
icu_plurals = { version = "2.2.0", features = ["compiled_data"] }

[features]
default = []
icu = []
legacy-convert = ["dep:csl-legacy", "citum-schema-data/legacy-convert"]
schema = ["dep:schemars", "citum-schema-data/schema"]
bindings = ["dep:specta", "citum-schema-data/bindings"]

[dev-dependencies]
criterion = { version = "0.8", features = ["html_reports"] }
rstest = "0.26"

[[bench]]
name = "formats"
harness = false

[lints]
workspace = true

[lib]
doctest = false
