[package]
name = "citum-schema"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
citum_schema_data = { package = "citum-schema-data", path = "../citum-schema-data", default-features = false }
citum_schema_style = { package = "citum-schema-style", path = "../citum-schema-style", default-features = false }

[features]
default = []
legacy-convert = ["citum_schema_data/legacy-convert", "citum_schema_style/legacy-convert"]
schema = ["citum_schema_data/schema", "citum_schema_style/schema"]

[dev-dependencies]
serde_json = "1.0"
serde_yaml = { package = "serde_yaml_ng", version = "0.10" }
criterion = { version = "0.5", features = ["html_reports"] }
ciborium = "0.2"

[lints]
workspace = true
