[package]
name = "citum-schema"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Citum schema facade for citation data and styles"
readme = "README.md"
repository.workspace = true

[dependencies]
citum-schema-data = { workspace = true }
citum-schema-style = { workspace = true }

[features]
default = []
icu = ["citum-schema-style/icu"]
legacy-convert = ["citum-schema-data/legacy-convert", "citum-schema-style/legacy-convert"]
schema = ["citum-schema-data/schema", "citum-schema-style/schema"]
bindings = ["citum-schema-data/bindings", "citum-schema-style/bindings"]

[dev-dependencies]
tracing.workspace = true
serde_json = "1.0"
serde_yaml = { package = "serde_yaml_ng", version = "0.10" }
criterion = { version = "0.8", features = ["html_reports"] }
ciborium = "0.2"

[lints]
workspace = true

[lib]
test = false
doctest = false
