[package]
name = "citum-server"
version.workspace = true
edition.workspace = true
authors = ["Bruce D'Arcus <bdarcus@gmail.com>"]
license = "MPL-2.0"
description = "Citum JSON-RPC server for citation and bibliography processing"

[[bin]]
name = "citum-server"
path = "src/main.rs"

[dependencies]
citum-engine = { package = "citum-engine", path = "../citum-engine" }
citum-schema = { package = "citum-schema", path = "../citum-schema" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = { package = "serde-saphyr", version = "0.0.21" }
thiserror = "2.0"
clap = { version = "4.4", features = ["derive", "color"] }

# async feature dependencies
tokio = { version = "1", features = ["full"], optional = true }

# http feature dependencies (implies async)
axum = { version = "0.8", optional = true }

[features]
default = []
async = ["tokio"]
http = ["async", "axum"]

[lints]
workspace = true
