[package]
name = "citum-server"
version.workspace = true
edition.workspace = true
authors = ["Bruce D'Arcus <bdarcus@gmail.com>"]
license.workspace = true
description = "Citum JSON-RPC server for citation and bibliography processing"
publish = false
repository.workspace = true

[[bin]]
name = "citum-server"
path = "src/main.rs"

[dependencies]
citum-engine = { package = "citum-engine", path = "../citum-engine" }
citum-schema = { package = "citum-schema", path = "../citum-schema" }
citum_store = { package = "citum_store", path = "../citum_store", features = ["http"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = { package = "serde_yaml_ng", version = "0.10" }
thiserror = "2.0"
clap = { version = "4.4", features = ["derive", "color"] }

# async feature dependencies
tokio = { version = "1", features = ["full"], optional = true }

# http feature dependencies (implies async)
axum = { version = "0.8", optional = true }

# schema feature dependencies
schemars = { version = "1.2.1", features = ["derive"], optional = true }

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }

[features]
default = []
async = ["tokio"]
http = ["async", "axum"]
schema-types = ["dep:schemars", "citum-engine/schema"]
schema = ["http", "schema-types"]

[lints]
workspace = true

[lib]
doctest = false
