[package]
name = "citum-server"
version.workspace = true
edition.workspace = true
authors = ["Bruce D'Arcus <bdarcus@gmail.com>"]
license.workspace = true
description = "Citum JSON-RPC server for citation and bibliography processing"
repository.workspace = true
homepage.workspace = true
readme = "README.md"
keywords = ["citation", "bibliography", "csl", "citeproc", "json-rpc"]
categories = ["command-line-utilities", "text-processing"]

[[bin]]
name = "citum-server"
path = "src/main.rs"

[dependencies]
citum-engine = { workspace = true }
citum-schema = { workspace = true }
citum_store = { workspace = true, features = ["http"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = { package = "serde_yaml_ng", version = "0.10" }
thiserror = "2.0"
clap = { version = "4.4", features = ["derive", "color"] }

# async feature dependencies
tokio = { version = "1", features = ["full"], optional = true }

# http feature dependencies (implies async)
axum = { version = "0.8", optional = true }

# schema feature dependencies
schemars = { version = "1.2.1", features = ["derive"], optional = true }

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }

[features]
default = ["http"]
async = ["dep:tokio"]
http = ["async", "dep:axum"]
schema-types = ["dep:schemars", "citum-engine/schema"]
schema = ["http", "schema-types"]

[lints]
workspace = true

[lib]
doctest = false
